fix overlaping component caused by absolute positioning

--- a/src/Description/DescriptionSection.css
+++ b/src/Description/DescriptionSection.css
@@ -1,34 +1,18 @@
 .DescriptionSection {
-    background-image: url('../Asset/IMG_6992.jpg');
+    background: linear-gradient(rgba(60, 78, 95, 0.8), rgba(60, 78, 95, 0.8)), url('../Asset/IMG_6992.jpg');
     background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: -2;
 }
 
-.DescriptionSection::after {
-    background-color: rgb(60, 78, 95);
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 0.8;
-}
-
 .Description {
+    position: absolute;
     margin: 20% auto;
-    margin-left: 40%;
+    padding-left: 40%;
     width: 50%;
 }
 
-p, h2 {
+p, .Name {
     font-size: 18pt;
     padding: 10px;
     color: white;
