--- a/src/Language/LanguageSection.css
+++ b/src/Language/LanguageSection.css
@@ -1,16 +1,14 @@
-.LanguageSection {
-    z-index: -2;
-}
-
 .Container {
     width: 80%;
-    display: inline;
+    text-align: center;
 }
 
 .languages {
     padding: 10px;
+    margin-left: 20px;
     background: rgb(38, 156, 117);
     border-radius: 10px;
     color: white;
     width: fit-content;
+    display: inline-block
 }
